<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.newtech.newtech_sfm.merchandising.rayon.RayonDialogFragment"
    tools:layout="@layout/fragment_dialog_rayon">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">


                <TextView
                    android:id="@+id/famille_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/famille"
                    android:textAllCaps="true"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/famille_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:drawable/btn_dropdown"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/famille_tv" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/show_article_switch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/rayon_par_article"
                    app:layout_constraintTop_toBottomOf="@+id/famille_spinner"
                    app:layout_constraintBottom_toTopOf="@+id/article_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/article_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/article"
                    android:textAllCaps="true"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/show_article_switch"
                    android:visibility="invisible"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/article_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:drawable/btn_dropdown"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/article_tv"
                    android:visibility="invisible"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rayon_largeur"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/largeur"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/article_spinner">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/rayon_largeur_et"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rayon_hauteur"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hauteur"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rayon_largeur">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/rayon_hauteur_et"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rayon_commentaire"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/commentaire"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rayon_hauteur"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/rayon_commentaire_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/first_image_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@color/primary"
                    android:text="@string/image_numero_1"
                    android:textColor="#616161"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/rayon_commentaire"
                    tools:layout_editor_absoluteX="40dp" />

                <ImageView
                    android:id="@+id/first_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="20dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/first_image_btn"
                    android:contentDescription="@string/first_image_vr" />


                <Button
                    android:id="@+id/second_image_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@color/primary"
                    android:text="@string/image_numero_2"
                    android:textColor="#616161"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/first_image"
                    tools:layout_editor_absoluteX="40dp" />

                <ImageView
                    android:id="@+id/second_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="20dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/second_image_btn"
                    android:contentDescription="@string/second_image_vr" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"

                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/second_image">


                    <Button
                        android:id="@+id/valider_vr_btn"
                        android:layout_width="90dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/button_shape"
                        android:text="@string/valider"
                        android:textColor="#616161"
                        android:textStyle="bold"

                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/annuler_vr_btn"
                        android:layout_width="90dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/button_shape"
                        android:text="@string/annuler"
                        android:textColor="#616161"
                        android:textStyle="bold"


                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>