<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@drawable/round_corner_bg"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".livraisoncnc.LivraisonDateActivity">

    <TextView
        android:id="@+id/close_tv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="@color/secondary"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:contentDescription="TODO"
            android:src="@drawable/icone_pers" />

        <TextView
            android:id="@+id/client_nom_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/saylani_chouaib"
            android:textColor="@color/secondary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/client_adresse_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/rue_abou_firas_el_hamadani_hay_elwahda_berrechid"
            android:textColor="@color/secondary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/appeler_ll"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/vert"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="TODO"
                android:src="@drawable/phone_call_picto"
                android:textColor="@color/blanc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appeler"
                android:textColor="@color/blanc"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trajet_ll"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/secondary"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="TODO"
                android:src="@drawable/road_gps_picto"
                android:textColor="@color/blanc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trajet"
                android:textColor="@color/blanc"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/visiter_ll"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/vert"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/visit_client_picto"
                android:textColor="@color/blanc" />

            <TextView
                android:id="@+id/visite_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visiter"
                android:textColor="@color/blanc"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnfollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_shape"
        android:text="@string/follow_me"
        android:textColor="@color/blanc"
        android:visibility="gone" />

</LinearLayout>



