<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:gravity="center"
    android:weightSum="1"
    android:background="@color/blanc">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logosavola2"/>
        <!--android:src="@drawable/logosavola2"-->


    <EditText
        android:id="@+id/email"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/primary"
        android:hint="@string/hint_email"
        android:layout_marginTop="10dip"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/blanc"
        android:textColorHint="@color/blanc" />


    <EditText
        android:id="@+id/pass"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/primary"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/blanc"
        android:textColorHint="@color/blanc" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="20dip"
        android:background="@color/primary"
        android:text="@string/btn_login"
        android:textColor="#5B6770" />

</LinearLayout>